--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Run tests
           command: npm test --passWithNoTests
-          
+
   build-node:
     # Build node project
     executor: node/default
@@ -54,7 +54,7 @@ jobs:
       - checkout
       - run:
           name: Install Vercel CLI
-          command: npm install --global vercel@latest
+          command: sudo npm install --global vercel@latest
       - run:
           name: Pull Vercel Environment Information
           command: vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
